--- a/Desktop/lub/lub/src/components/App.css
+++ b/Desktop/lub/lub/src/components/App.css
@@ -1,10 +1,43 @@
 
 .App {
-    background-color: rgb(51, 51, 47);
+    background-color:rgb(32, 32, 32);
+    height: 100%;
 }
 
-h3 {
+.section1 {
+    position: relative;
+    width: 90%;
+    height: 800px;;
+    background-color: rgb(42, 40, 40);
+    justify-content: center;
+    align-items: center;
+    top: 50px;
+    left: 70px;
+}
+.name {
+    position: relative;
     font-size: 80px;
-    padding-right: 30px;
-    padding-left: 50px;
+    left: 160px;
+    top: 290px;
+    color: rgb(251, 251, 251);
+    font-style: italic;
+}
+
+.description {
+    position: relative;
+    font-size: 25px;
+    left: 160px;
+    top: 300px;
+    font-style: italic;
+    color: rgb(157, 156, 152);
+}
+
+.logo {
+    width: 500px;
+    bottom: 110px;
+    position: relative;
+    left: 700px;
+    height: 650px;
+    background: url('../images/logo_transparent.png') no-repeat center;
+    background-size: cover;
 }
