--- a/Desktop/lub/lub/src/components/SideBar.css
+++ b/Desktop/lub/lub/src/components/SideBar.css
@@ -1,9 +1,10 @@
 .SideBar {
-    position: absolute;
+    position: fixed;
     width: 60px;
     height: 50px;
     align-items: center;
     justify-content: center;
     display: grid;
-    z-index: 1;
+    z-index: 10000;
+    top: 50px;
 }
