--- a/src/components/Stack.css
+++ b/src/components/Stack.css
@@ -27,17 +27,25 @@ h4 {
 }
 
 .title {
+    height: auto;
     font-size: 39px;
-    background-color: rgb(58, 81, 73);
+    background-color: rgb(60, 57, 57);
     display: flex;
     justify-content: center;
     align-items: center;
-    color: rgb(0, 0, 0);
+    color: rgb(111, 110, 110);
     padding: 20px;
 }
 
+.textArea {
+    position: relative;
+    margin-top: 50px;
+
+}
+
 .textStar {
-    margin-top: 40px;
+    top: 40px;
+    margin-top: 120px;
     margin: 0 auto;
     justify-content: center;
     align-items: center;
@@ -63,8 +71,8 @@ h4 {
     display: row;
 }
 
-.star1 {
-    border: 2px solid rgb(46, 165, 35);
+#starArea {
+    border: 2px solid rgb(0, 0, 0);
     border-radius: 5px;
     padding: 5px;
     margin: 0 auto;
@@ -74,34 +82,10 @@ h4 {
     justify-content: center;
     align-items: center;
     background-color: transparent;
-    margin-top: 4px;
-
+    margin-top: 6px;
 }
 
-.star2 {
-    border: 2px solid rgb(221, 232, 13);
-    border-radius: 5px;
-    padding: 5px;
-    margin: 0 auto;
-    width: 80%;
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: transparent;
-    margin-top: 4px;
-}
 
-.star3 {
-    border: 2px solid rgb(233, 17, 17);
-    border-radius: 5px;
-    padding: 5px;
-    margin: 0 auto;
-    width: 80%;
-    height: 80px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    background-color: transparent;
-    margin-top: 4px;
+.starArea:hover {
+    background-color: aliceblue;
 }
