--- a/src/components/Contato.css
+++ b/src/components/Contato.css
@@ -14,17 +14,21 @@
 .section4 {
     position: relative;
     width: 90%;
-    height: 400px;
+    height: 350px;
     background-color: rgb(42, 40, 40);
     top: 50px;
     left: 70px;
 }
 
+.hold {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .list {
     margin: 0 auto;
     font-size: 20px;
-    justify-content: center;
-    align-items: center;
     color:aliceblue;
     padding-top: 100px;
 }
