--- a/src/components/Stack.css
+++ b/src/components/Stack.css
@@ -28,7 +28,7 @@ h4 {
 
 .title {
     height: auto;
-    font-size: 39px;
+    font-size: 25px;
     background-color: rgb(60, 57, 57);
     display: flex;
     justify-content: center;
@@ -54,8 +54,7 @@ h4 {
     border: 3px;
     width: 800px;
     height: 10px;
-}
-
+} 
 
 .starFather {
     top: 230px;
@@ -63,16 +62,25 @@ h4 {
     display: row;
 }
 
+.skills {
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+    background-color: aqua;
+    height: 120px;
+    width: 80%;
+}
+
 #starArea {
-    border: 2px solid rgb(0, 0, 0);
+    border: 2px solid rgb(255, 255, 255);
     border-radius: 5px;
     padding: 5px;
     margin: 0 auto;
     width: 80%;
     height: 80px;
-    display: flex;
     justify-content: center;
     align-items: center;
+    display: flex;
     background-color: transparent;
     margin-top: 6px;
 }
