--- a/src/components/Stack.css
+++ b/src/components/Stack.css
@@ -22,7 +22,6 @@ h4 {
     background-color: rgb(42, 40, 40);
     justify-content: center;
     align-items: center;
-    top: 50px;
     left: 70px;
 }
 
@@ -37,111 +36,120 @@ h4 {
     padding: 20px;
 }
 
-.textArea {
-    position: relative;
-    margin-top: 50px;
-}
-
-.textStar {
-    top: 40px;
-    margin-top: 120px;
-    margin: 0 auto;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    font-size: 25px;
-    border: 3px;
-    width: 800px;
-    height: 10px;
-} 
-
-.starFather {
-    background-color: rgb(60, 57, 57);;
-    top: 310px;
-    width: 97%;
-    left: 20px;
-    position: relative;
-    justify-content:space-around;
-    align-items: center;
-    display: flex;
-}
-
-
-
-.iconsArea1 {
-    position: relative;
-    top: 50px;
+.fManager {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 6px;
 }
 
-#icon:hover {
-    transform: scale(1.5);
-}
-
-.area1 {
-    position: absolute;
-    background-color: transparent;
-    height: 200px;
-    width: 1050px;
-    top: 6px;
-}
-
-.area2 {
+.fContainer {
     position: relative;
-    right: 405px;
-    background-color: transparent;
-    height: 200px;
-    width: 1050px;
+    height: 350px;
+    margin-top: 1%;
+    width: 1300px;
+}
+ 
+.stackTextArea {
+    position: relative;
+    width: 100%;
+    justify-content: space-between;
+    display: flex;
 }
 
-.area3 {
+.stackText {
+    position: relative;
+    width: 49%;
+    padding-top: 13px;
+    padding-bottom: 6px;
+    color: aliceblue;
+    border-top: 3px solid grey;
+}
+
+.stackTextS {
+    position: relative;
+    width: 49%;
+    padding-top: 10px;
+    padding-bottom: 6px;
+    color: aliceblue;
+    border-top: 3px solid grey;
+}
+
+.stackTextArea {
+    position: relative;
+    width: 100%;
+    display: flex;
+}
+
+/* Segundo container */
+
+.sContainer {
+    position: relative;
+    height: 260px;
+    margin-top: 1%;
+    width: 1300px;
+    border-radius: 4px;
+}
+
+.stackTextAreaS {
+    position: relative;
+    width: 100%;
+    display: flex;
+    height: 35px;
+}
+
+.stackTextT {
+    position: relative;
+    width: 100%;
+    padding-top: 13px;
+    padding-bottom: 6px;
+    color: aliceblue;
+    border-top: 3px solid grey;
+}
+
+/* Blocos */
+
+.fBlock {
     position: absolute;
-    right: 48px;
-    background-color: transparent;
-    height: 200px;
-    width: 1050px;
-    top: 6px;
-}
-
-.link1 {
-    text-decoration: none;
-    color: white;
-    font-size: 25px;
-    padding: 15px;
-    display:inline-block;
+    top: 80px;
+    width: 49%;
+    height: 260px;
+    background-color: rgb(60, 57, 57);
+    border-radius: 4px;
+    justify-content: space-around;
+    align-items: center;
+    display: flex;
     cursor: pointer;
 }
 
-ul {
-    display: inline;
-    margin: 0;
-    padding: 0;
+#icon:hover {
+    transition: transform .5s;
+    transform: scale(1.5)
 }
 
-ul li {display: inline-block;}
-ul li:hover {
-    background: rgb(60, 57, 57);
-    color: rgb(84, 84, 84);
-}
-ul li:hover ul {display: block;}
-ul li ul {
+.sBlock {
     position: absolute;
-    width: 200px;
-    display: none;
+    top: 80px;
+    right: 0px;
+    width: 49%;
+    height: 260px;
+    background-color: rgb(60, 57, 57);
+    border-radius: 4px;
+    justify-content: space-around;
+    align-items: center;
+    display: flex;
+    cursor: pointer;
 }
 
-ul li .area1 {  
-    display: block; 
+.tBlock {
+    position: absolute;
+    top: 80px;
+    right: 0px;
+    width: 100%;
+    height: 260px;
+    background-color: rgb(60, 57, 57);
+    border-radius: 4px;
+    justify-content: space-around;
+    align-items: center;
+    display: flex;
+    cursor: pointer;
 }
-
-ul li .area1  {display:block !important;} 
-ul li .area1:hover {background:rgb(60, 57, 57) }
-
-ul li .area2  {display:block !important;} 
-ul li .area2:hover {background:rgb(60, 57, 57) }
-
-ul li .area3  {display:block !important;} 
-ul li .area3:hover {background:rgb(60, 57, 57) }
