--- a/src/components/App.css
+++ b/src/components/App.css
@@ -49,3 +49,42 @@
     background: url('../images/logo_transparent.png') no-repeat center;
     background-size: cover;
 }
+
+
+
+@media (max-width: 500px) {
+    .section {
+        position: relative;
+        width: 100%;
+        height: 900px;
+        display: inline-block;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .name {
+        position: relative;
+        font-size: 40px;
+        left: 40px;
+        top: 50px;
+        color: rgb(251, 251, 251);
+    }
+
+    .description {
+        position: relative;
+        font-size: 9px;
+        left: 30px;
+        top: 60px;
+        color: rgb(157, 156, 152);
+    }
+
+    .logo {
+        position: relative;
+        left: 50px;
+        top:120px;
+        width: 250px;
+        height: 500px;
+        background: url('../images/logo_transparent.png') no-repeat center;
+        background-size: cover;
+    }
+}
