--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,10 @@ form {
     margin-left: 35%;
 }
 
+.spanArea {
+    background-color: rgb(116, 102, 114);
+}
+
 footer {
     background-color: rgb(41, 30, 40);
     color: aquamarine;
