--- a/css/style-equipe.css
+++ b/css/style-equipe.css
@@ -1,11 +1,12 @@
 html {
-    padding: 0%;
+    padding: 0;
     box-sizing: border-box;
-    margin: 0%;
+    margin: 0;
 }
 
 body {
-    background-color: antiquewhite;
+    width: 100%;
+    height: 100%;
 }
 
 .container {
