--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,18 @@
 body {
-    background-image: url(./background.jpg);
+    background-color: rgb(128 62 189);
     image-rendering: auto;
     background-repeat: no-repeat, no-repeat;
 }
 
+footer p {
+    color:white;
+}
+
 footer {
     background-color: blueviolet;
+    align-items: center;
+    justify-content: center;
+    display: flex;
 }
 
 .container-fluid {
@@ -16,7 +23,6 @@ footer {
 .col {
     display: flex;
     align-items: center;
-    background-color: rgb(33, 30, 30);
     justify-content: space-between;
 }
 
@@ -28,9 +34,9 @@ h1 {
     color: black;
     font-size: 100px;
     text-align: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    margin-top: 25px;
-    margin-bottom: 4px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    margin-top: 7px;
+    margin-bottom: 7px;
 }
 
 h3 {
@@ -50,7 +56,17 @@ form {
 }
 
 .spanArea {
-    background-color: rgb(116, 102, 114);
+    padding-left: 5px;
+    padding-right: 5px;
+    padding-top: 100px;
+}
+
+.spanArea h3 {
+    color: rgb(0, 0, 0);
+}
+
+.spanArea p {
+    color: rgb(0, 0, 0);
 }
 
 footer {
@@ -79,10 +95,6 @@ img {
 .carousel,
 .row {
     margin-bottom: 30px;
-}
-
-.carousel {
-    margin-top: 6px;
 }
 
 .carousel {
